# lumina_engine

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: App.hpp  Entity.hpp  EventManager.hpp  Listener.hpp  Logger.hpp  Renderer.hpp  Utility.hpp  Window.hpp
notes/: engine_notes.txt
src/: App.cpp  EventManager.cpp  Logger.cpp  Renderer.cpp  Utility.cpp  Window.cpp
